# remote_operation_api_examples

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_examples.sh
remote_operation_api_examples/: config.py  utils.py
remote_operation_api_examples/examples/: authentication.py  customer_branch_CRUD.py  orders_and_deliveries.py  vehicles.py
remote_operation_api_examples/runner/: main.py
tests/: test_remote_operation_api_examples.py
