[tool.poetry]
name = "remote_operation_api_examples"
version = "0.1.0"
description = ""
authors = ["Simone Robutti <simone.robutti@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
teraki_examples = "remote_operation_api_examples.runner.main:cli"